// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`valid simple expressions 1`] = `
{
  "_": "linux",
  "ast": {
    "name": "linux",
    "type": "condition",
  },
}
`;

exports[`valid simple expressions 2`] = `
{
  "_": "(linux)",
  "ast": {
    "name": "linux",
    "type": "condition",
  },
}
`;

exports[`valid simple expressions 3`] = `
{
  "_": "!mac",
  "ast": {
    "child": {
      "name": "mac",
      "type": "condition",
    },
    "type": "not",
  },
}
`;

exports[`valid simple expressions 4`] = `
{
  "_": "(!mac)",
  "ast": {
    "child": {
      "name": "mac",
      "type": "condition",
    },
    "type": "not",
  },
}
`;

exports[`valid simple expressions 5`] = `
{
  "_": "!(mac)",
  "ast": {
    "child": {
      "name": "mac",
      "type": "condition",
    },
    "type": "not",
  },
}
`;

exports[`valid simple expressions 6`] = `
{
  "_": "((mac))",
  "ast": {
    "name": "mac",
    "type": "condition",
  },
}
`;

exports[`valid simple expressions 7`] = `
{
  "_": "((!(mac)))",
  "ast": {
    "child": {
      "name": "mac",
      "type": "condition",
    },
    "type": "not",
  },
}
`;

exports[`valid simple expressions 8`] = `
{
  "_": "(!(!(mac)))",
  "ast": {
    "child": {
      "child": {
        "name": "mac",
        "type": "condition",
      },
      "type": "not",
    },
    "type": "not",
  },
}
`;

exports[`valid simple expressions 9`] = `
{
  "_": "!(!(!(mac)))",
  "ast": {
    "child": {
      "child": {
        "child": {
          "name": "mac",
          "type": "condition",
        },
        "type": "not",
      },
      "type": "not",
    },
    "type": "not",
  },
}
`;

exports[`valid simple expressions 10`] = `
{
  "_": "!(!(!(!mac)))",
  "ast": {
    "child": {
      "child": {
        "child": {
          "child": {
            "name": "mac",
            "type": "condition",
          },
          "type": "not",
        },
        "type": "not",
      },
      "type": "not",
    },
    "type": "not",
  },
}
`;

exports[`valid simple expressions 11`] = `
{
  "_": "(((linux)))",
  "ast": {
    "name": "linux",
    "type": "condition",
  },
}
`;

exports[`valid simple expressions 12`] = `
{
  "_": "!(!(!(!(!mac))))",
  "ast": {
    "child": {
      "child": {
        "child": {
          "child": {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
          "type": "not",
        },
        "type": "not",
      },
      "type": "not",
    },
    "type": "not",
  },
}
`;

exports[`valid simple expressions 13`] = `
{
  "_": "!(!linux)",
  "ast": {
    "child": {
      "child": {
        "name": "linux",
        "type": "condition",
      },
      "type": "not",
    },
    "type": "not",
  },
}
`;

exports[`invalid simple expressions 1`] = `
{
  "_": "linux!",
  "ast": "SyntaxError: Unexpected token: not, expected one of: and, or, close-paren",
}
`;

exports[`invalid simple expressions 2`] = `
{
  "_": "(linux!)",
  "ast": "SyntaxError: Unexpected token: not, expected one of: and, or, close-paren",
}
`;

exports[`invalid simple expressions 3`] = `
{
  "_": "(linux)!",
  "ast": "SyntaxError: Unexpected token: not, expected one of: and, or, close-paren",
}
`;

exports[`invalid simple expressions 4`] = `
{
  "_": "mac!linux",
  "ast": "SyntaxError: Unexpected token: not, expected one of: and, or, close-paren",
}
`;

exports[`invalid simple expressions 5`] = `
{
  "_": "(mac)linux",
  "ast": "SyntaxError: Unexpected token: condition, expected one of: and, or, close-paren",
}
`;

exports[`invalid simple expressions 6`] = `
{
  "_": "mac!(linux)",
  "ast": "SyntaxError: Unexpected token: not, expected one of: and, or, close-paren",
}
`;

exports[`invalid simple expressions 7`] = `
{
  "_": "!!mac",
  "ast": "SyntaxError: Unexpected token: not, expected one of: open-paren, condition",
}
`;

exports[`invalid simple expressions 8`] = `
{
  "_": "()",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid simple expressions 9`] = `
{
  "_": "(mac))",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid simple expressions 10`] = `
{
  "_": "(mac))linux",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid simple expressions 11`] = `
{
  "_": "(mac))hello!123",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid simple expressions 12`] = `
{
  "_": "((mac)",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid simple expressions 13`] = `
{
  "_": "(((mac)",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid simple expressions 14`] = `
{
  "_": "mac))",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid simple expressions 15`] = `
{
  "_": "linux#",
  "ast": "SyntaxError: Unexpected character: #",
}
`;

exports[`invalid simple expressions 16`] = `
{
  "_": "ma(c)",
  "ast": "SyntaxError: Unexpected token: open-paren, expected one of: and, or, close-paren",
}
`;

exports[`invalid simple expressions 17`] = `
{
  "_": "",
  "ast": "SyntaxError: Empty expression",
}
`;

exports[`invalid simple expressions 18`] = `
{
  "_": "(",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid simple expressions 19`] = `
{
  "_": ")",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid simple expressions 20`] = `
{
  "_": "!",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid simple expressions 21`] = `
{
  "_": "&",
  "ast": "SyntaxError: Unexpected token: and",
}
`;

exports[`invalid simple expressions 22`] = `
{
  "_": "|",
  "ast": "SyntaxError: Unexpected token: or",
}
`;

exports[`invalid simple expressions 23`] = `
{
  "_": "linux&",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid simple expressions 24`] = `
{
  "_": "linux|",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid simple expressions 25`] = `
{
  "_": "&linux",
  "ast": "SyntaxError: Unexpected token: and",
}
`;

exports[`invalid simple expressions 26`] = `
{
  "_": "|linux",
  "ast": "SyntaxError: Unexpected token: or",
}
`;

exports[`invalid simple expressions 27`] = `
{
  "_": " ( linux ) ",
  "ast": "SyntaxError: Unexpected character:  ",
}
`;

exports[`invalid simple expressions 28`] = `
{
  "_": "mac linux",
  "ast": "SyntaxError: Unexpected character:  ",
}
`;

exports[`invalid simple expressions 29`] = `
{
  "_": "((linux))()",
  "ast": "SyntaxError: Unexpected token: open-paren, expected one of: and, or, close-paren",
}
`;

exports[`invalid simple expressions 30`] = `
{
  "_": "(()linux)",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid simple expressions 31`] = `
{
  "_": "(linux))(",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid simple expressions 32`] = `
{
  "_": "!!!",
  "ast": "SyntaxError: Unexpected token: not, expected one of: open-paren, condition",
}
`;

exports[`invalid simple expressions 33`] = `
{
  "_": "&&&",
  "ast": "SyntaxError: Unexpected token: and",
}
`;

exports[`invalid simple expressions 34`] = `
{
  "_": "|||",
  "ast": "SyntaxError: Unexpected token: or",
}
`;

exports[`invalid simple expressions 35`] = `
{
  "_": "!!!linux",
  "ast": "SyntaxError: Unexpected token: not, expected one of: open-paren, condition",
}
`;

exports[`invalid simple expressions 36`] = `
{
  "_": "!!!(!!!linux)",
  "ast": "SyntaxError: Unexpected token: not, expected one of: open-paren, condition",
}
`;

exports[`valid complex expressions 1`] = `
{
  "_": "linux&!mac",
  "ast": {
    "children": [
      {
        "name": "linux",
        "type": "condition",
      },
      {
        "child": {
          "name": "mac",
          "type": "condition",
        },
        "type": "not",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 2`] = `
{
  "_": "linux&!mac&win",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
        ],
        "type": "and",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 3`] = `
{
  "_": "linux&!mac&win&!win",
  "ast": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "name": "linux",
                "type": "condition",
              },
              {
                "child": {
                  "name": "mac",
                  "type": "condition",
                },
                "type": "not",
              },
            ],
            "type": "and",
          },
          {
            "name": "win",
            "type": "condition",
          },
        ],
        "type": "and",
      },
      {
        "child": {
          "name": "win",
          "type": "condition",
        },
        "type": "not",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 4`] = `
{
  "_": "(linux&!mac)",
  "ast": {
    "children": [
      {
        "name": "linux",
        "type": "condition",
      },
      {
        "child": {
          "name": "mac",
          "type": "condition",
        },
        "type": "not",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 5`] = `
{
  "_": "linux&(!mac)",
  "ast": {
    "children": [
      {
        "name": "linux",
        "type": "condition",
      },
      {
        "child": {
          "name": "mac",
          "type": "condition",
        },
        "type": "not",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 6`] = `
{
  "_": "(linux)&(!mac)",
  "ast": {
    "children": [
      {
        "name": "linux",
        "type": "condition",
      },
      {
        "child": {
          "name": "mac",
          "type": "condition",
        },
        "type": "not",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 7`] = `
{
  "_": "(linux&!mac)&win",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
        ],
        "type": "and",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 8`] = `
{
  "_": "linux&(!mac&win)",
  "ast": {
    "children": [
      {
        "name": "linux",
        "type": "condition",
      },
      {
        "children": [
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
          {
            "name": "win",
            "type": "condition",
          },
        ],
        "type": "and",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 9`] = `
{
  "_": "(linux&!mac)&(win)",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
        ],
        "type": "and",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 10`] = `
{
  "_": "(linux)&(!mac&win)",
  "ast": {
    "children": [
      {
        "name": "linux",
        "type": "condition",
      },
      {
        "children": [
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
          {
            "name": "win",
            "type": "condition",
          },
        ],
        "type": "and",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 11`] = `
{
  "_": "(linux)&(!mac)&(win)",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
        ],
        "type": "and",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 12`] = `
{
  "_": "((linux)&(!mac)&(win))",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
        ],
        "type": "and",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 13`] = `
{
  "_": "linux&mac|win",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "name": "mac",
            "type": "condition",
          },
        ],
        "type": "and",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "or",
  },
}
`;

exports[`valid complex expressions 14`] = `
{
  "_": "linux&(mac|win)",
  "ast": {
    "children": [
      {
        "name": "linux",
        "type": "condition",
      },
      {
        "children": [
          {
            "name": "mac",
            "type": "condition",
          },
          {
            "name": "win",
            "type": "condition",
          },
        ],
        "type": "or",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 15`] = `
{
  "_": "(linux|mac)&win",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "name": "mac",
            "type": "condition",
          },
        ],
        "type": "or",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 16`] = `
{
  "_": "((linux&mac)|(!win&linux))",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "name": "mac",
            "type": "condition",
          },
        ],
        "type": "and",
      },
      {
        "children": [
          {
            "child": {
              "name": "win",
              "type": "condition",
            },
            "type": "not",
          },
          {
            "name": "linux",
            "type": "condition",
          },
        ],
        "type": "and",
      },
    ],
    "type": "or",
  },
}
`;

exports[`valid complex expressions 17`] = `
{
  "_": "((linux&(!mac))&((win|linux)))",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
        ],
        "type": "and",
      },
      {
        "children": [
          {
            "name": "win",
            "type": "condition",
          },
          {
            "name": "linux",
            "type": "condition",
          },
        ],
        "type": "or",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 18`] = `
{
  "_": "!linux&!mac",
  "ast": {
    "children": [
      {
        "child": {
          "name": "linux",
          "type": "condition",
        },
        "type": "not",
      },
      {
        "child": {
          "name": "mac",
          "type": "condition",
        },
        "type": "not",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 19`] = `
{
  "_": "(linux|!mac)&win",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "child": {
              "name": "mac",
              "type": "condition",
            },
            "type": "not",
          },
        ],
        "type": "or",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "and",
  },
}
`;

exports[`valid complex expressions 20`] = `
{
  "_": "!(!linux&mac)|win",
  "ast": {
    "children": [
      {
        "child": {
          "children": [
            {
              "child": {
                "name": "linux",
                "type": "condition",
              },
              "type": "not",
            },
            {
              "name": "mac",
              "type": "condition",
            },
          ],
          "type": "and",
        },
        "type": "not",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "or",
  },
}
`;

exports[`valid complex expressions 21`] = `
{
  "_": "((linux|mac)&(!win|linux))&win",
  "ast": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "name": "linux",
                "type": "condition",
              },
              {
                "name": "mac",
                "type": "condition",
              },
            ],
            "type": "or",
          },
          {
            "children": [
              {
                "child": {
                  "name": "win",
                  "type": "condition",
                },
                "type": "not",
              },
              {
                "name": "linux",
                "type": "condition",
              },
            ],
            "type": "or",
          },
        ],
        "type": "and",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "and",
  },
}
`;

exports[`invalid complex expressions 1`] = `
{
  "_": "linux&|mac",
  "ast": "SyntaxError: Unexpected token: or, expected one of: open-paren, condition, not",
}
`;

exports[`invalid complex expressions 2`] = `
{
  "_": "linux&&mac",
  "ast": "SyntaxError: Unexpected token: and, expected one of: open-paren, condition, not",
}
`;

exports[`invalid complex expressions 3`] = `
{
  "_": "&|",
  "ast": "SyntaxError: Unexpected token: and",
}
`;

exports[`invalid complex expressions 4`] = `
{
  "_": "&&||",
  "ast": "SyntaxError: Unexpected token: and",
}
`;

exports[`invalid complex expressions 5`] = `
{
  "_": "(linux&mac",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid complex expressions 6`] = `
{
  "_": "linux&mac))",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid complex expressions 7`] = `
{
  "_": "linux&",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid complex expressions 8`] = `
{
  "_": "&mac",
  "ast": "SyntaxError: Unexpected token: and",
}
`;

exports[`invalid complex expressions 9`] = `
{
  "_": "linux||",
  "ast": "SyntaxError: Unexpected token: or, expected one of: open-paren, condition, not",
}
`;

exports[`invalid complex expressions 10`] = `
{
  "_": "linux&",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid complex expressions 11`] = `
{
  "_": "&mac",
  "ast": "SyntaxError: Unexpected token: and",
}
`;

exports[`invalid complex expressions 12`] = `
{
  "_": "linux||",
  "ast": "SyntaxError: Unexpected token: or, expected one of: open-paren, condition, not",
}
`;

exports[`invalid complex expressions 13`] = `
{
  "_": "((linux&mac",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`invalid complex expressions 14`] = `
{
  "_": "linux&mac))",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`invalid complex expressions 15`] = `
{
  "_": "(linux|mac)&(win",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`mixed valid and invalid expressions 1`] = `
{
  "_": "linux&(mac",
  "ast": "SyntaxError: Unexpected end of expression",
}
`;

exports[`mixed valid and invalid expressions 2`] = `
{
  "_": "!(linux&mac))",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`mixed valid and invalid expressions 3`] = `
{
  "_": "linux&(mac!)",
  "ast": "SyntaxError: Unexpected token: not, expected one of: and, or, close-paren",
}
`;

exports[`mixed valid and invalid expressions 4`] = `
{
  "_": "(linux&!mac)|win)",
  "ast": "SyntaxError: Unexpected token: close-paren",
}
`;

exports[`edge case expressions 1`] = `
{
  "_": "a",
  "ast": {
    "name": "a",
    "type": "condition",
  },
}
`;

exports[`edge case expressions 2`] = `
{
  "_": "!b",
  "ast": {
    "child": {
      "name": "b",
      "type": "condition",
    },
    "type": "not",
  },
}
`;

exports[`edge case expressions 3`] = `
{
  "_": "thisIsAVeryLongConditionName",
  "ast": {
    "name": "thisIsAVeryLongConditionName",
    "type": "condition",
  },
}
`;

exports[`edge case expressions 4`] = `
{
  "_": "!thisIsAnotherVeryLongConditionName",
  "ast": {
    "child": {
      "name": "thisIsAnotherVeryLongConditionName",
      "type": "condition",
    },
    "type": "not",
  },
}
`;

exports[`edge case expressions 5`] = `
{
  "_": "condition123",
  "ast": {
    "name": "condition123",
    "type": "condition",
  },
}
`;

exports[`edge case expressions 6`] = `
{
  "_": "123condition",
  "ast": {
    "name": "123condition",
    "type": "condition",
  },
}
`;

exports[`edge case expressions 7`] = `
{
  "_": "linux&mac|win",
  "ast": {
    "children": [
      {
        "children": [
          {
            "name": "linux",
            "type": "condition",
          },
          {
            "name": "mac",
            "type": "condition",
          },
        ],
        "type": "and",
      },
      {
        "name": "win",
        "type": "condition",
      },
    ],
    "type": "or",
  },
}
`;
